[project]
name = "upworktool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "python-telegram-bot[job-queue]>=22.7",
    "pytz>=2026.2",
    "tinydb>=4.8.2",
]
